--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,13 @@
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
-<dependency>
+<!--dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
-    <version>5.5.2</version>
-</dependency>
+    <version>5.4.0</version>
+</dependency-->
+
+
 
 <!-- https://mvnrepository.com/artifact/jexcelapi/jxl -->
 <dependency>
@@ -204,7 +206,6 @@
     <artifactId>jstl</artifactId>
     <version>1.2</version>
 </dependency>
-   
   </dependencies>
 
   <build>
